# python-project-50

./: .gitignore  Makefile  README.md  lesst_diff.py  pyproject.toml
.github/workflows/: gendiff.yml
gendiff/: __init__.py  build_diff.py  cli.py  format_diff.py  generate_diff.py  parser.py  pathfinder.py  reader.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: deep_json_expected.txt  json_expected.txt
