[project]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff. My second project in Hexlet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.9.6",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
